--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -1,10 +1,5 @@
 ---
-const SOCIAL_LINKS = {
-  github: "https://www.github.com/jaydenharrod",
-  medium: "https://medium.com/@JaydenHarrod",
-  youtube: "https://www.youtube.com/jaydenharrod",
-  linkedin: "https://www.linkedin.com/in/jaydenharrod/",
-};
+import { SOCIAL_LINKS } from "../data/constants";
 ---
 
 <div class="flex flex-wrap items-center gap-x-4 sm:items-center">
