--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,7 +30,7 @@ import aboutBackground from "../../public/about-bg.png";
         />
 
         <div
-          class="absolute inset-0 rounded-xl dark:bg-black/40 bg-gradient-to-b from-blue-700/30 to-orange-700/40"
+          class="absolute inset-0 rounded-xl dark:bg-black/40 bg-gradient-to-b from-sky-900/40 to-yellow-700/40"
         >
         </div>
       </div>
@@ -39,12 +39,12 @@ import aboutBackground from "../../public/about-bg.png";
         class="relative z-10 flex flex-col items-center justify-center h-full px-4"
       >
         <h1
-          class="title text-6xl font-extrabold dark:text-neutral-100/80 text-neutral-100 mb-4"
+          class="title text-6xl shadow-sm font-extrabold dark:text-neutral-100/80 text-neutral-100 mb-4"
         >
           About
         </h1>
         <h2
-          class="mb-8 text-3xl font-medium text-neutral-100 dark:text-neutral-100/80"
+          class="mb-8 text-3xl shadow-sm font-medium text-neutral-100 dark:text-neutral-100/80"
         >
           Creative Technologist
         </h2>
@@ -93,6 +93,7 @@ import aboutBackground from "../../public/about-bg.png";
         </div>
       </div>
     </div>
+    <h2 class="title mb-4 text-xl dark:text-neutral-300">Story</h2>
     <p class="text">
       A multi-disciplinary technologist specialising in scaling software
       products and teams.
@@ -110,7 +111,7 @@ import aboutBackground from "../../public/about-bg.png";
     </p>
   </section>
   <section aria-label="Pulse" class="mb-2 mt-16 text">
-    <h2 class="title mb-4 text-xl">Career History</h2>
+    <h3 class="title mb-4 text-xl dark:text-neutral-300">Career History</h3>
     <ul class="space-y-4 sm:space-y-2">
       <li class="flex flex-col gap-x-2 sm:flex-row">
         <span class="min-w-[120px]">Senior Software Engineer:</span>
