--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import PageLayout from "@/layouts/Base";
-import { Image } from "astro:assets";
-import profile from "../../public/profile.jpeg";
+import profile from "../../public/profile.png";
 import heroBackground from "../../public/hero-bg.png";
-import chlLogo from "../../public/chl-logo.png";
+import camplifyLogo from "../../public/chl-logo.png";
 import betmakersLogo from "../../public/betmakers-logo.png";
 import hipagesLogo from "../../public/hipages-logo.png";
 import covidenceLogo from "../../public/covidence-logo.png";
 import digivizerLogo from "../../public/digivizer-logo.png";
+import { SOCIAL_LINKS } from "../data/constants";
 ---
 
 <PageLayout
@@ -27,7 +27,7 @@ import digivizerLogo from "../../public/digivizer-logo.png";
         />
 
         <div
-          class="absolute inset-0 rounded-xl dark:bg-black/40 bg-gradient-to-b from-blue-700/30 to-orange-700/40"
+          class="absolute inset-0 rounded-xl bg-neutral-900/30 bg-gradient-to-b from-blue-600/40 to-orange-800/50"
         >
         </div>
       </div>
@@ -36,12 +36,12 @@ import digivizerLogo from "../../public/digivizer-logo.png";
         class="relative z-10 flex flex-col items-center justify-center h-full px-4"
       >
         <h1
-          class="title text-6xl font-extrabold dark:text-neutral-100/80 text-neutral-100 mb-4"
+          class="title text-6xl shadow-sm font-extrabold dark:text-neutral-100/80 text-neutral-100 mb-4"
         >
           Jayden Harrod
         </h1>
         <h2
-          class="mb-8 text-3xl font-medium text-neutral-100 dark:text-neutral-100/80"
+          class="mb-8 text-3xl shadow-sm font-medium text-neutral-100 dark:text-neutral-100/80"
         >
           Building Great Products
         </h2>
@@ -64,7 +64,7 @@ import digivizerLogo from "../../public/digivizer-logo.png";
         class="h-14 dark:grayscale dark:invert dark:opacity-25 opacity-90 dark:hover:opacity-30"
       />
       <img
-        src={chlLogo.src}
+        src={camplifyLogo.src}
         alt="Company 1"
         class="h-14 dark:grayscale dark:invert dark:opacity-25 opacity-90 dark:hover:opacity-30"
       />
@@ -77,18 +77,86 @@ import digivizerLogo from "../../public/digivizer-logo.png";
   </section>
 
   <section>
-    <div class="flex gap-14">
-      <Image
+    <div
+      class="flex flex-col-reverse items-center text-center sm:text-left sm:items-start sm:flex-row gap-14"
+    >
+      <img
         class="h-40 w-40 cursor-pointer dark:hover:grayscale-0 dark:grayscale -rotate-2 rounded-lg border-2 dark:opacity-75 border-neutral-200 p-2 shadow-lg transition-transform hover:-rotate-0 hover:scale-105 dark:border-neutral-800 dark:bg-neutral-900"
-        src={profile}
-        alt="Profile Image"
+        src={profile.src}
+        alt="Profile"
       />
-      <p class="text opacity-80 pt-2">
+      <p class="text opacity-80 pt-0 sm:pt-2">
         Hey! I'm a technical operator who's helped scale multiple product
         companies to $50M+ ARR from the ground up. I've operated during moments
         of chaos, M&A, and rapid growth to deliver meaningful outcomes across
         engineering, infrastructure, compliance, teams, and product.
       </p>
+    </div>
+  </section>
+
+  <section class="mt-20 grid grid-cols-1 gap-12 md:grid-cols-2">
+    <div
+      class="rounded-xl border bg-white dark:bg-neutral-950 border-neutral-200 p-8 dark:border-neutral-800"
+    >
+      <h2 class="mb-4 text font-bold text-neutral-900 dark:text-neutral-400">
+        Looking for a builder?
+      </h2>
+      <p class="mb-6 text opacity-70 dark:text-neutral-500">
+        I partner with founders to turn chaos into clarity by owning the
+        tech/product stack so you can focus on vision and growth.
+      </p>
+      <a
+        href={SOCIAL_LINKS.linkedin}
+        class="inline-flex items-center mt-auto text-neutral-600 dark:text-neutral-400 hover:underline"
+      >
+        Hire Me
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-1"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+      </a>
+    </div>
+
+    <div
+      class="rounded-xl border bg-white dark:bg-neutral-950 border-neutral-200 p-8 dark:border-neutral-800"
+    >
+      <h2 class="mb-4 text font-bold text-neutral-900 dark:text-neutral-400">
+        Looking to invest?
+      </h2>
+      <p class="mb-6 text opacity-70 dark:text-neutral-500">
+        I've run every part of the machine: engineering, product, support, ops.
+        I build quietly, ship deliberately, and scale fast.
+      </p>
+      <div class="space-x-4">
+        <a
+          href={SOCIAL_LINKS.linkedin}
+          class="inline-flex items-center mt-auto text-neutral-600 dark:text-neutral-400 hover:underline"
+        >
+          Get in Touch
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4 ml-1"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+          </svg>
+        </a>
+      </div>
     </div>
   </section>
 </PageLayout>
