--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="mt-auto mb-8 flex w-full max-w-3xl flex-col items-center justify-center gap-y-2 pt-20 text-center align-top text-sm text-gray-500 dark:text-gray-400 sm:flex-row sm:items-start sm:justify-between"
+  class="mt-auto pb-6 flex w-full max-w-3xl flex-col items-center justify-center gap-y-2 pt-20 text-center align-top text-sm text-gray-500 dark:text-gray-400 sm:flex-row sm:items-start sm:justify-between"
 >
   <nav aria-label="Social links">
     <SocialList />
