--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@
 	}
 
 	html body {
-		@apply mx-auto flex h-full max-w-3xl flex-col bg-bgColor px-8 pt-4 font-sans text-base font-normal text-textColor antialiased;
+		@apply mx-auto flex h-full max-w-3xl flex-col bg-bgColor px-0 sm:px-8 font-sans text-base font-normal text-textColor antialiased;
 	}
 }
 
