--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,7 +51,7 @@ import aboutBackground from "../../public/about-bg.png";
       </div>
     </div>
   </section>
-  <section>
+  <section class="mt-6 sm:mt-0 ml-4 mr-4 sm:ml-0 sm:mr-0">
     <div class="mb-10 flex justify-center gap-4">
       <div
         class="-rotate-2 rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
@@ -110,7 +110,7 @@ import aboutBackground from "../../public/about-bg.png";
       that win.
     </p>
   </section>
-  <section aria-label="Pulse" class="mb-2 mt-16 text">
+  <section class="mt-6 sm:mt-0 ml-4 mr-4 sm:ml-0 sm:mr-0">
     <h3 class="title mb-4 text-xl dark:text-neutral-300">Career History</h3>
     <ul class="space-y-4 sm:space-y-2">
       <li class="flex flex-col gap-x-2 sm:flex-row">
