--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ import { SOCIAL_LINKS } from "../data/constants";
     </div>
   </section>
 
-  <section>
+  <section class="ml-4 mr-4 sm:ml-0 sm:mr-0">
     <div
       class="flex flex-col-reverse items-center text-center sm:text-left sm:items-start sm:flex-row gap-14"
     >
@@ -96,9 +96,11 @@ import { SOCIAL_LINKS } from "../data/constants";
     </div>
   </section>
 
-  <section class="mt-24 grid grid-cols-1 gap-12 md:grid-cols-2">
+  <section
+    class="mt-20 grid grid-cols-1 gap-4 sm:gap-12 md:grid-cols-2 ml-4 mr-4 sm:ml-0 sm:mr-0"
+  >
     <div
-      class="rounded-xl border bg-white dark:bg-neutral-950 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <h2 class="mb-4 text font-bold text-neutral-900 dark:text-neutral-400">
         Looking for a builder?
@@ -129,7 +131,7 @@ import { SOCIAL_LINKS } from "../data/constants";
     </div>
 
     <div
-      class="rounded-xl border bg-white dark:bg-neutral-950 border-neutral-200 p-8 dark:border-neutral-800"
+      class="sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <h2 class="mb-4 text font-bold text-neutral-900 dark:text-neutral-400">
         Looking to invest?
