--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -44,9 +44,9 @@ import projectBackground from "../../public/project-bg.png";
       </div>
     </div>
   </section>
-  <section class="grid sm:gap-8 md:grid-cols-2">
+  <section class="grid gap-4 sm:gap-8 md:grid-cols-2 mt-4 sm:mt-0">
     <article
-      class="group relative flex flex-col p-6 rounded-none sm:rounded-2xl bg-white dark:bg-neutral-900/50 border border-neutral-200 dark:border-neutral-800 hover:border-neutral-300 dark:hover:border-neutral-700"
+      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
@@ -85,7 +85,7 @@ import projectBackground from "../../public/project-bg.png";
     </article>
 
     <article
-      class="group relative flex flex-col p-6 rounded-none sm:rounded-2xl bg-white dark:bg-neutral-900/50 border border-neutral-200 dark:border-neutral-800 hover:border-neutral-300 dark:hover:border-neutral-700"
+      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
       <div class="flex items-center gap-4 mb-4">
         <div
