--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -11,9 +11,9 @@ const currentYear = new Date().getFullYear();
     <SocialList />
   </nav>
   <div>
-    &copy;{currentYear}&nbsp;<a
-      class="h-card no-underline hover:underline"
-      href="https://jayden.gg">Jayden Harrod</a
+    &copy; {currentYear}
+    <a class="h-card no-underline hover:underline" href="https://jayden.gg"
+      >Jayden Harrod</a
     >
   </div>
 </footer>
