--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -114,9 +114,29 @@ import aboutBackground from "../../public/about-bg.png";
     <h3 class="title mb-4 text-xl dark:text-neutral-300">Career History</h3>
     <ul class="space-y-4 sm:space-y-2">
       <li class="flex flex-col gap-x-2 sm:flex-row">
+        <span class="min-w-[120px]">Chief Remote Pilot:</span>
+        <span class="flex items-center gap-2">
+          <a
+            class="cactus-link"
+            target="_blank"
+            href="https://northshed.com.au/">Northshed</a
+          >
+        </span>
+      </li>
+      <li class="flex flex-col gap-x-2 sm:flex-row">
+        <span class="min-w-[120px]">Chief Technology Officer:</span>
+        <span class="flex items-center gap-2">
+          <a class="cactus-link" target="_blank" href="https://twellve.com/"
+            >Twellve</a
+          >
+        </span>
+      </li>
+      <li class="flex flex-col gap-x-2 sm:flex-row">
         <span class="min-w-[120px]">Senior Software Engineer:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://covidence.org/">Covidence</a>
+          <a class="cactus-link" target="_blank" href="https://covidence.org/"
+            >Covidence</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <Typescript class="h-5 w-5" name="simple-icons:typescript" />
           <React class="h-5 w-5" name="simple-icons:react" />
@@ -124,9 +144,11 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Product & Engineering Manager:</span>
+        <span class="min-w-[120px]">Software Engineering Manager:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://camplify.com/">Camplify</a>
+          <a class="cactus-link" target="_blank" href="https://camplify.com/"
+            >Camplify</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <Typescript class="h-5 w-5" name="simple-icons:typescript" />
           <React class="h-5 w-5" name="simple-icons:react" />
@@ -134,9 +156,11 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Product & Engineering Lead:</span>
+        <span class="min-w-[120px]">Software Engineering Lead:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://betmakers.com/">Betmakers</a>
+          <a class="cactus-link" target="_blank" href="https://betmakers.com/"
+            >Betmakers</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <Typescript class="h-5 w-5" name="simple-icons:typescript" />
           <React class="h-5 w-5" name="simple-icons:react" />
@@ -144,9 +168,11 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Senior Software Engineer:</span>
+        <span class="min-w-[120px]">Software Engineer:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://mudbath.com.au/">Mudbath</a>
+          <a class="cactus-link" target="_blank" href="https://mudbath.com.au/"
+            >Mudbath</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <Typescript class="h-5 w-5" name="simple-icons:typescript" />
           <React class="h-5 w-5" name="simple-icons:react" />
@@ -154,9 +180,13 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Growth Software Engineer:</span>
+        <span class="min-w-[120px]">Software Engineer:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://hipagesgroup.com.au/">hipages</a>
+          <a
+            class="cactus-link"
+            target="_blank"
+            href="https://hipagesgroup.com.au/">hipages</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <Typescript class="h-5 w-5" name="simple-icons:typescript" />
           <React class="h-5 w-5" name="simple-icons:react" />
@@ -164,9 +194,11 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Design Software Engineer:</span>
+        <span class="min-w-[120px]">Software Engineer:</span>
         <span class="flex items-center gap-2">
-          <a class="cactus-link" href="https://digivizer.com/">Digivizer</a>
+          <a class="cactus-link" target="_blank" href="https://digivizer.com/"
+            >Digivizer</a
+          >
           <Javascript class="h-5 w-5" name="simple-icons:javascript" />
           <React class="h-5 w-5" name="simple-icons:react" />
           <Rubyonrails class="h-5 w-5" name="simple-icons:ruby-on-rails" />
@@ -175,7 +207,9 @@ import aboutBackground from "../../public/about-bg.png";
       <li class="flex flex-col gap-x-2 sm:flex-row">
         <span class="min-w-[120px]">Operations Manager:</span>
         <span>
-          <a class="cactus-link" href="/about/">PickleHosting (EXIT)</a>
+          <a class="cactus-link" target="_blank" href="/about/"
+            >PickleHosting (EXIT)</a
+          >
         </span>
       </li>
     </ul>
