--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -52,19 +52,29 @@ import projectBackground from "../../public/project-bg.png";
         <div
           class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
         >
-          📡
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            viewBox="0 0 256 256"
+            ><path
+              d="M69.12,94.15,28.5,128l40.62,33.85a8,8,0,1,1-10.24,12.29l-48-40a8,8,0,0,1,0-12.29l48-40a8,8,0,0,1,10.24,12.3Zm176,27.7-48-40a8,8,0,1,0-10.24,12.3L227.5,128l-40.62,33.85a8,8,0,1,0,10.24,12.29l48-40a8,8,0,0,0,0-12.29ZM162.73,32.48a8,8,0,0,0-10.25,4.79l-64,176a8,8,0,0,0,4.79,10.26A8.14,8.14,0,0,0,96,224a8,8,0,0,0,7.52-5.27l64-176A8,8,0,0,0,162.73,32.48Z"
+            ></path></svg
+          >
         </div>
         <h3
           class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
         >
-          TelemetryWorks
+          Twellve
         </h3>
       </div>
       <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        R&D technology solutions for modern field based work challenges.
+        Embedded CTO for startups in chaos.
       </p>
       <a
-        href="https://telemetryworks.com/"
+        href="https://twellve.com/?source=jayden_website"
+        target="_blank"
         class="inline-flex items-center mt-auto text-sky-800 dark:text-neutral-400 hover:underline"
       >
         Visit Project
@@ -91,7 +101,16 @@ import projectBackground from "../../public/project-bg.png";
         <div
           class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
         >
-          📍
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            viewBox="0 0 256 256"
+            ><path
+              d="M189.66,66.34a8,8,0,0,0-11.32,0L148.69,96H107.31L77.66,66.34A8,8,0,0,0,66.34,77.66L96,107.31v41.38L66.34,178.34a8,8,0,0,0,11.32,11.32L107.31,160h41.38l29.65,29.66a8,8,0,0,0,11.32-11.32L160,148.69V107.31l29.66-29.65A8,8,0,0,0,189.66,66.34ZM112,112h32v32H112Zm26.51-50.67a44,44,0,1,1,56.16,56.16A7.86,7.86,0,0,1,192,118a8,8,0,0,1-2.67-15.54,28,28,0,1,0-35.74-35.74,8,8,0,1,1-15.08-5.34ZM224,180a44,44,0,0,1-85.49,14.67,8,8,0,0,1,15.08-5.34,28,28,0,1,0,35.74-35.74,8,8,0,0,1,5.34-15.08A44.07,44.07,0,0,1,224,180ZM117.49,194.67a44,44,0,1,1-56.16-56.16,8,8,0,0,1,5.34,15.08,28,28,0,1,0,35.74,35.74,8,8,0,0,1,15.08,5.34ZM32,76a44,44,0,0,1,85.49-14.67,8,8,0,1,1-15.08,5.34,28,28,0,1,0-35.74,35.74A8,8,0,0,1,64,118a7.86,7.86,0,0,1-2.67-.46A44.07,44.07,0,0,1,32,76Z"
+            ></path></svg
+          >
         </div>
         <h3
           class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
@@ -100,10 +119,107 @@ import projectBackground from "../../public/project-bg.png";
         </h3>
       </div>
       <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        Professional drone-based aerial mapping and reporting services.
+        Hunter Valley drone solutions.
       </p>
       <a
-        href="https://northshed.com.au/"
+        href="https://northshed.com.au/?source=jayden_website"
+        target="_blank"
+        class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
+      >
+        Visit Project
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-1"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+      </a>
+    </article>
+    <article
+      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+    >
+      <div class="flex items-center gap-4 mb-4">
+        <div
+          class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            viewBox="0 0 256 256"
+            ><path
+              d="M128,88a40,40,0,1,0,40,40A40,40,0,0,0,128,88Zm0,64a24,24,0,1,1,24-24A24,24,0,0,1,128,152Zm73.71,7.14a80,80,0,0,1-14.08,22.2,8,8,0,0,1-11.92-10.67,63.95,63.95,0,0,0,0-85.33,8,8,0,1,1,11.92-10.67,80.08,80.08,0,0,1,14.08,84.47ZM69,103.09a64,64,0,0,0,11.26,67.58,8,8,0,0,1-11.92,10.67,79.93,79.93,0,0,1,0-106.67A8,8,0,1,1,80.29,85.34,63.77,63.77,0,0,0,69,103.09ZM248,128a119.58,119.58,0,0,1-34.29,84,8,8,0,1,1-11.42-11.2,103.9,103.9,0,0,0,0-145.56A8,8,0,1,1,213.71,44,119.58,119.58,0,0,1,248,128ZM53.71,200.78A8,8,0,1,1,42.29,212a119.87,119.87,0,0,1,0-168,8,8,0,1,1,11.42,11.2,103.9,103.9,0,0,0,0,145.56Z"
+            ></path></svg
+          >
+        </div>
+        <h3
+          class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
+        >
+          Field HQ
+        </h3>
+      </div>
+      <p class="text-neutral-600 dark:text-neutral-500 mb-4">
+        Nerve centre for field based teams.
+      </p>
+      <a
+        href="https://fieldhq.com.au/?source=jayden_website"
+        target="_blank"
+        class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
+      >
+        Visit Project
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-1"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+      </a>
+    </article>
+    <article
+      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+    >
+      <div class="flex items-center gap-4 mb-4">
+        <div
+          class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            viewBox="0 0 256 256"
+            ><path
+              d="M164.44,121.34l-48-32A8,8,0,0,0,104,96v64a8,8,0,0,0,12.44,6.66l48-32a8,8,0,0,0,0-13.32ZM120,145.05V111l25.58,17ZM234.33,69.52a24,24,0,0,0-14.49-16.4C185.56,39.88,131,40,128,40s-57.56-.12-91.84,13.12a24,24,0,0,0-14.49,16.4C19.08,79.5,16,97.74,16,128s3.08,48.5,5.67,58.48a24,24,0,0,0,14.49,16.41C69,215.56,120.4,216,127.34,216h1.32c6.94,0,58.37-.44,91.18-13.11a24,24,0,0,0,14.49-16.41c2.59-10,5.67-28.22,5.67-58.48S236.92,79.5,234.33,69.52Zm-15.49,113a8,8,0,0,1-4.77,5.49c-31.65,12.22-85.48,12-86,12H128c-.54,0-54.33.2-86-12a8,8,0,0,1-4.77-5.49C34.8,173.39,32,156.57,32,128s2.8-45.39,5.16-54.47A8,8,0,0,1,41.93,68c30.52-11.79,81.66-12,85.85-12h.27c.54,0,54.38-.18,86,12a8,8,0,0,1,4.77,5.49C221.2,82.61,224,99.43,224,128S221.2,173.39,218.84,182.47Z"
+            ></path></svg
+          >
+        </div>
+        <h3
+          class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
+        >
+          YouTube
+        </h3>
+      </div>
+      <p class="text-neutral-600 dark:text-neutral-500 mb-4">
+        Documenting the founder journey.
+      </p>
+      <a
+        href="https://youtube.com/jaydenharrod/?source=jayden_website"
+        target="_blank"
         class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
         Visit Project
