--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -114,17 +114,7 @@ import aboutBackground from "../../public/about-bg.png";
     <h3 class="title mb-4 text-xl dark:text-neutral-300">Career History</h3>
     <ul class="space-y-4 sm:space-y-2">
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Chief Remote Pilot:</span>
-        <span class="flex items-center gap-2">
-          <a
-            class="cactus-link"
-            target="_blank"
-            href="https://northshed.com.au/">Northshed</a
-          >
-        </span>
-      </li>
-      <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Chief Technology Officer:</span>
+        <span class="min-w-[120px]">Principal Consultant:</span>
         <span class="flex items-center gap-2">
           <a class="cactus-link" target="_blank" href="https://twellve.com/"
             >Twellve</a
@@ -156,7 +146,7 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Software Engineering Lead:</span>
+        <span class="min-w-[120px]">Founding Software Engineer:</span>
         <span class="flex items-center gap-2">
           <a class="cactus-link" target="_blank" href="https://betmakers.com/"
             >Betmakers</a
