--- a/src/pages/gear.astro
+++ b/src/pages/gear.astro
@@ -11,7 +11,7 @@ import PageLayout from "@/layouts/Base";
 >
   <section class="ml-8 sm:ml-8">
     <h1 class="title">Gear</h1>
-    <h2 class="text">What makes a productive environment</h2>
+    <h2 class="text">The tools I use.</h2>
     <ul class="space-y-10 md:space-y-2">
       <li class="flex flex-col sm:flex-row items-start sm:items-center">
         <span class="min-w-[120px] text-gray-500">Chair:</span>
