--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -59,23 +59,23 @@ import projectBackground from "../../public/project-bg.png";
             fill="currentColor"
             viewBox="0 0 256 256"
             ><path
-              d="M69.12,94.15,28.5,128l40.62,33.85a8,8,0,1,1-10.24,12.29l-48-40a8,8,0,0,1,0-12.29l48-40a8,8,0,0,1,10.24,12.3Zm176,27.7-48-40a8,8,0,1,0-10.24,12.3L227.5,128l-40.62,33.85a8,8,0,1,0,10.24,12.29l48-40a8,8,0,0,0,0-12.29ZM162.73,32.48a8,8,0,0,0-10.25,4.79l-64,176a8,8,0,0,0,4.79,10.26A8.14,8.14,0,0,0,96,224a8,8,0,0,0,7.52-5.27l64-176A8,8,0,0,0,162.73,32.48Z"
+              d="M164.44,121.34l-48-32A8,8,0,0,0,104,96v64a8,8,0,0,0,12.44,6.66l48-32a8,8,0,0,0,0-13.32ZM120,145.05V111l25.58,17ZM234.33,69.52a24,24,0,0,0-14.49-16.4C185.56,39.88,131,40,128,40s-57.56-.12-91.84,13.12a24,24,0,0,0-14.49,16.4C19.08,79.5,16,97.74,16,128s3.08,48.5,5.67,58.48a24,24,0,0,0,14.49,16.41C69,215.56,120.4,216,127.34,216h1.32c6.94,0,58.37-.44,91.18-13.11a24,24,0,0,0,14.49-16.41c2.59-10,5.67-28.22,5.67-58.48S236.92,79.5,234.33,69.52Zm-15.49,113a8,8,0,0,1-4.77,5.49c-31.65,12.22-85.48,12-86,12H128c-.54,0-54.33.2-86-12a8,8,0,0,1-4.77-5.49C34.8,173.39,32,156.57,32,128s2.8-45.39,5.16-54.47A8,8,0,0,1,41.93,68c30.52-11.79,81.66-12,85.85-12h.27c.54,0,54.38-.18,86,12a8,8,0,0,1,4.77,5.49C221.2,82.61,224,99.43,224,128S221.2,173.39,218.84,182.47Z"
             ></path></svg
           >
         </div>
         <h3
           class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
         >
-          Twellve
+          YouTube
         </h3>
       </div>
       <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        Embedded CTO for startups in chaos.
+        Educating ambitious founders.
       </p>
       <a
-        href="https://twellve.com/?source=jayden_website"
+        href="https://youtube.com/jaydenharrod/?source=jayden_website"
         target="_blank"
-        class="inline-flex items-center mt-auto text-sky-800 dark:text-neutral-400 hover:underline"
+        class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
         Visit Project
         <svg
@@ -119,7 +119,7 @@ import projectBackground from "../../public/project-bg.png";
         </h3>
       </div>
       <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        Hunter Valley drone solutions.
+        Commerical drone pilot.
       </p>
       <a
         href="https://northshed.com.au/?source=jayden_website"
@@ -142,6 +142,56 @@ import projectBackground from "../../public/project-bg.png";
         </svg>
       </a>
     </article>
+
+    <article
+      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
+    >
+      <div class="flex items-center gap-4 mb-4">
+        <div
+          class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            fill="currentColor"
+            viewBox="0 0 256 256"
+            ><path
+              d="M69.12,94.15,28.5,128l40.62,33.85a8,8,0,1,1-10.24,12.29l-48-40a8,8,0,0,1,0-12.29l48-40a8,8,0,0,1,10.24,12.3Zm176,27.7-48-40a8,8,0,1,0-10.24,12.3L227.5,128l-40.62,33.85a8,8,0,1,0,10.24,12.29l48-40a8,8,0,0,0,0-12.29ZM162.73,32.48a8,8,0,0,0-10.25,4.79l-64,176a8,8,0,0,0,4.79,10.26A8.14,8.14,0,0,0,96,224a8,8,0,0,0,7.52-5.27l64-176A8,8,0,0,0,162.73,32.48Z"
+            ></path></svg
+          >
+        </div>
+        <h3
+          class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
+        >
+          Twellve
+        </h3>
+      </div>
+      <p class="text-neutral-600 dark:text-neutral-500 mb-4">
+        Systems for startups in chaos.
+      </p>
+      <a
+        href="https://twellve.com/?source=jayden_website"
+        target="_blank"
+        class="inline-flex items-center mt-auto text-sky-800 dark:text-neutral-400 hover:underline"
+      >
+        Visit Project
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-4 w-4 ml-1"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+      </a>
+    </article>
+
     <article
       class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
     >
@@ -167,58 +217,10 @@ import projectBackground from "../../public/project-bg.png";
         </h3>
       </div>
       <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        Nerve centre for field based teams.
+        Nerve centre for field teams.
       </p>
       <a
         href="https://fieldhq.com.au/?source=jayden_website"
-        target="_blank"
-        class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
-      >
-        Visit Project
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-4 w-4 ml-1"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
-        </svg>
-      </a>
-    </article>
-    <article
-      class="ml-4 mr-4 sm:ml-0 sm:mr-0 sm:rounded-xl rounded-none border bg-white dark:bg-neutral-900 border-neutral-200 p-8 dark:border-neutral-800"
-    >
-      <div class="flex items-center gap-4 mb-4">
-        <div
-          class="h-12 w-12 rounded-full bg-neutral-100 dark:bg-neutral-700/30 flex items-center justify-center dark:grayscale"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="32"
-            height="32"
-            fill="currentColor"
-            viewBox="0 0 256 256"
-            ><path
-              d="M164.44,121.34l-48-32A8,8,0,0,0,104,96v64a8,8,0,0,0,12.44,6.66l48-32a8,8,0,0,0,0-13.32ZM120,145.05V111l25.58,17ZM234.33,69.52a24,24,0,0,0-14.49-16.4C185.56,39.88,131,40,128,40s-57.56-.12-91.84,13.12a24,24,0,0,0-14.49,16.4C19.08,79.5,16,97.74,16,128s3.08,48.5,5.67,58.48a24,24,0,0,0,14.49,16.41C69,215.56,120.4,216,127.34,216h1.32c6.94,0,58.37-.44,91.18-13.11a24,24,0,0,0,14.49-16.41c2.59-10,5.67-28.22,5.67-58.48S236.92,79.5,234.33,69.52Zm-15.49,113a8,8,0,0,1-4.77,5.49c-31.65,12.22-85.48,12-86,12H128c-.54,0-54.33.2-86-12a8,8,0,0,1-4.77-5.49C34.8,173.39,32,156.57,32,128s2.8-45.39,5.16-54.47A8,8,0,0,1,41.93,68c30.52-11.79,81.66-12,85.85-12h.27c.54,0,54.38-.18,86,12a8,8,0,0,1,4.77,5.49C221.2,82.61,224,99.43,224,128S221.2,173.39,218.84,182.47Z"
-            ></path></svg
-          >
-        </div>
-        <h3
-          class="text-xl font-semibold text-neutral-900 dark:text-neutral-300"
-        >
-          YouTube
-        </h3>
-      </div>
-      <p class="text-neutral-600 dark:text-neutral-500 mb-4">
-        Documenting the founder journey.
-      </p>
-      <a
-        href="https://youtube.com/jaydenharrod/?source=jayden_website"
         target="_blank"
         class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
