--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,68 +46,21 @@ import aboutBackground from "../../public/about-bg.png";
         <h2
           class="mb-8 text-3xl shadow-sm font-medium text-neutral-100 dark:text-neutral-100/80"
         >
-          Creative Technologist
+          Strategic Technologist
         </h2>
       </div>
     </div>
   </section>
   <section class="mt-6 sm:mt-0 ml-4 mr-4 sm:ml-0 sm:mr-0">
-    <div class="mb-10 flex justify-center gap-4">
-      <div
-        class="-rotate-2 rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
-      >
-        <div
-          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
-        >
-          <Image
-            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
-            src={backpack}
-            alt="Profile Image"
-          />
-        </div>
-      </div>
-      <div
-        class="rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:-rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
-      >
-        <div
-          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
-        >
-          <Image
-            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
-            src={climbing}
-            alt="Profile Image"
-          />
-        </div>
-      </div>
-      <div
-        class="rotate-2 rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:-rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
-      >
-        <div
-          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
-        >
-          <Image
-            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
-            src={toastie}
-            alt="Profile Image"
-          />
-        </div>
-      </div>
-    </div>
-    <h2 class="title mb-4 text-xl dark:text-neutral-300">Story</h2>
+    <h2 class="title mb-4 text-xl dark:text-neutral-300">About Jayden</h2>
     <p class="text">
-      A multi-disciplinary technologist specialising in scaling software
-      products and teams.
-    </p>
-    <p class="text">
-      I bring over a decade of experience leading high-growth software teams,
-      architecting scalable systems, and translating product ambiguity into
-      delivery momentum. I'm most effective in the 0→2→100 journey where
-      structure meets speed, and thrive when engineering, product, and business
-      outcomes converge. Known for staying calm under pressure, I create order
-      from chaos, lead with empathy, and scale systems and people without losing
-      traction on the ground. My strengths lie in building operating models,
-      shaping product strategy through a technical lens, and growing cultures
-      that win.
+      I'm an Australian based technologist with a 10 year of experience in
+      digital marketing and a 10 year of experience in software design and
+      development. I now operate independently focused on helping founder-led
+      companies scale.
+      <br />
+      <br />
+      In my spare time, I respond to emergencies and fly drones commerically.
     </p>
   </section>
   <section class="mt-6 sm:mt-0 ml-4 mr-4 sm:ml-0 sm:mr-0">
@@ -195,13 +148,64 @@ import aboutBackground from "../../public/about-bg.png";
         </span>
       </li>
       <li class="flex flex-col gap-x-2 sm:flex-row">
-        <span class="min-w-[120px]">Operations Manager:</span>
+        <span class="min-w-[120px]">Content Creator:</span>
         <span>
-          <a class="cactus-link" target="_blank" href="/about/"
-            >PickleHosting (EXIT)</a
-          >
+          <a class="cactus-link" target="_blank" href="/about/">Microsoft</a>
+        </span>
+      </li>
+      <li class="flex flex-col gap-x-2 sm:flex-row">
+        <span class="min-w-[120px]">Content Creator:</span>
+        <span>
+          <a class="cactus-link" target="_blank" href="/about/">Lenovo</a>
+        </span>
+      </li>
+      <li class="flex flex-col gap-x-2 sm:flex-row">
+        <span class="min-w-[120px]">Content Creator:</span>
+        <span>
+          <a class="cactus-link" target="_blank" href="/about/">YouTube</a>
         </span>
       </li>
     </ul>
+    <div class="mt-12 pb-12 flex justify-center gap-4">
+      <div
+        class="-rotate-2 rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
+      >
+        <div
+          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
+        >
+          <Image
+            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
+            src={backpack}
+            alt="Profile Image"
+          />
+        </div>
+      </div>
+      <div
+        class="rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:-rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
+      >
+        <div
+          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
+        >
+          <Image
+            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
+            src={climbing}
+            alt="Profile Image"
+          />
+        </div>
+      </div>
+      <div
+        class="rotate-2 rounded-lg border dark:grayscale dark:hover:filter-none border-gray-300 px-2 pb-2 pt-2 shadow-md transition-transform hover:-rotate-2 dark:border-neutral-800 dark:bg-neutral-900"
+      >
+        <div
+          class="w-full max-w-52 max-h-52 h-full aspect-square sm:max-w-[13rem]"
+        >
+          <Image
+            class="h-full w-full object-cover cursor-grab rounded-sm dark:opacity-70 border dark:border-neutral-400"
+            src={toastie}
+            alt="Profile Image"
+          />
+        </div>
+      </div>
+    </div>
   </section>
 </PageLayout>
