--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -73,7 +73,7 @@ import projectBackground from "../../public/project-bg.png";
         Educating ambitious founders.
       </p>
       <a
-        href="https://youtube.com/jaydenharrod/?source=jayden_website"
+        href="https://youtube.com/jaydenharrod/?utm_source=jayden_website"
         target="_blank"
         class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
@@ -122,7 +122,7 @@ import projectBackground from "../../public/project-bg.png";
         Commerical drone pilot.
       </p>
       <a
-        href="https://northshed.com.au/?source=jayden_website"
+        href="https://northshed.com.au/?utm_source=jayden_website"
         target="_blank"
         class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
@@ -171,7 +171,7 @@ import projectBackground from "../../public/project-bg.png";
         Systems for startups in chaos.
       </p>
       <a
-        href="https://twellve.com/?source=jayden_website"
+        href="https://twellve.com/?utm_source=jayden_website"
         target="_blank"
         class="inline-flex items-center mt-auto text-sky-800 dark:text-neutral-400 hover:underline"
       >
@@ -220,7 +220,7 @@ import projectBackground from "../../public/project-bg.png";
         Nerve centre for field teams.
       </p>
       <a
-        href="https://fieldhq.com.au/?source=jayden_website"
+        href="https://fieldhq.com.au/?utm_source=jayden_website"
         target="_blank"
         class="inline-flex items-center mt-auto text-orange-800 dark:text-neutral-400 hover:underline"
       >
